--- a/template/index.html
+++ b/template/index.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <script type="module" src="src/main/index.jsx"></script>
+  <script type="module">
+    export * from "./src/main/index.cljs";
+  </script>
 </head>
 <body>
   <div id="root"></div>
